# cbm64basic

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  demo.sh  petscii_map_gen.py  pyproject.toml
docs/: search.js  src.html
docs/src/: cbm64_editor.html  cbm_basic.html  charset.html  colors.html  commands.html  constants.html  functions.html  interpreter.html  prg_file.html  screen.html
examples/: demo_colors.bas  demo_program.bas  demo_screen_stress.bas  demo_simple_colors.bas  session.bas  simple_test.bas  tables.bas
src/: __init__.py  cbm64_editor.py  cbm_basic.py  charset.py  colors.py  commands.py  constants.py  functions.py  interpreter.py  prg_file.py  screen.py
tests/: __init__.py  test_basic.py
