[project]
name = "cbm64basic"
version = "0.1.0"
description = "Commodore 64 BASIC V2 Editor with Syntax Highlighting"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "prompt-toolkit>=3.0.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pdoc>=14.0.0",
]

[project.scripts]
cbm64 = "src.cbm64_editor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
